# modules/system/dto/user.go
@@ -1,12 +1,23 @@
 package dto
 
+import (
+	"time"
+)
+
 type UserForm struct {
-	Name string `json:"name"`
+	UserItem `json:",inline"`
 }
 
 type UserListQueryFilter struct {
+	UserItem `json:",inline"`
 }
 
 type UserItem struct {
-	Name string `json:"name"`
+	ID       *int32     `json:"id,omitempty""`
+	Username *string    `json:"username,omitempty"`
+	Age      *int32     `json:"age,omitempty"`
+	Sex      *string    `json:"sex,omitempty"`
+	Birthday *time.Time `json:"birthday,omitempty"`
+	Status   *string    `json:"status,omitempty"`
+	State    *string    `json:"state,omitempty"`
 }
